# raytracing

./: CMakeLists.txt  README.md  main.cpp
camera/: CMakeLists.txt  camera.cpp  camera.h
light/: CMakeLists.txt  light.cpp  light.h
objects/: CMakeLists.txt  color.h  cube.cpp  cube.h  object.cpp  object.h  objects.h  plane.cpp  plane.h  ray.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
raytracer/: CMakeLists.txt  raytracer.cpp  raytracer.h
raytracing/: raytracing.cpp  raytracing.h
scene/: CMakeLists.txt  scene.cpp  scene.h
